tests/out/error/index/left_range.in.bt
arr := [1, 2, 3]
arr[1..3] = 0
arr[1..2] = [0, 0, 0]
